--- a/.github/workflows/Update work.yaml
+++ b/.github/workflows/Update work.yaml
@@ -19,9 +19,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - name: Run app
+      - name: Run iqiyi
         run: npm install
-      - run: node app.js
+      - run: node iqiyi.js
         env:
           iQIYI_COOKIE: ${{ secrets.iQIYI_COOKIE }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
